Closer .row overflow fix

--- a/css/master.sass
+++ b/css/master.sass
@@ -103,9 +103,10 @@ p
 	margin-top: 15px
 	border-top: 2px solid $hilight
 	background-color: $bgc + 20
+.paddings
 	padding: 4em 0
 .portrait
-	max-width: 300px !important
+	max-width: 300px
 .portr
 	margin-top: 0
 .about,.conta
